-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: Lustre 2.11.0
-
Fix Version/s: Lustre 2.12.0
-
Labels:None
-
Severity:3
-
Rank (Obsolete):9223372036854775807
Since the landing of patch https://review.whamcloud.com/20621 "LU-8235 scripts: pass unrecognized options to lfs migrate" any short options with adjacent arguments, such as -S1M or -E-1 are treated as separate options, like -S -1 -M or -E -1.
- is related to
-
LU-11510 preserve PFL/FLR/DoM layout with lfs_migrate
-
- Resolved
-