LU-10801 utils: fix lfs_migrate argument parsing

Since the landing of the following patch, any short options with
adjacent arguments(e.g. -S1M or -E-1) are treated as separate
options(e.g. -S -1 -M or -E -1).
- Lustre-commit: 60c5bc2502591f46260e11db540c0ec2adbc8db8
- Lustre-change: https://review.whamcloud.com/20621

This patch is to fix the broken argument parsing in lfs_migrate.

Change-Id: I99b9518a8f371c2becb6b1fc346b8a14dd02870e
Signed-off-by: Andreas Dilger <adilger@whamcloud.com>
Signed-off-by: Emoly Liu <emoly@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/32977
Tested-by: Jenkins
Reviewed-by: Jian Yu <yujian@whamcloud.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>